# Teiken-Claw

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  pyproject.toml  requirements.txt  teiken_claw_implementation_plan.md  teiken_claw_spec.md
alembic/: env.py
app/: __init__.py  main.py
data/: vault.key
docs/: ADR-001-initial-architecture.md  FILES.md  INSTALLER.md  PHASE0_DELIVERY_REPORT.md  PHASE11_DELIVERY_REPORT.md  PHASE1_DELIVERY_REPORT.md  PHASE2_DELIVERY_REPORT.md  PHASE3_DELIVERY_REPORT.md  PHASE4_DELIVERY_REPORT.md  PHASE6_DELIVERY_REPORT.md  PHASE7_DELIVERY_REPORT.md  PHASE8_DELIVERY_REPORT.md  STATUS.md  api.md  config.md
modes/: architect.yaml  builder.yaml  debugger.yaml  minimal.yaml  research.yaml
scripts/: _branding.ps1  backup.ps1  e2e_control_plane.ps1  install_service.ps1  reset_db.ps1  run_dev.ps1  setup.ps1  smoke_test.ps1  teiken.ps1
soul/: core.md  goals.yaml  guardrails.yaml  style.md
souls/: teiken_claw_agent.yaml
teiken_claw/: __init__.py
tests/: __init__.py  conftest.py  test_agent_runtime.py  test_agent_runtime_phase17.py  test_app.py  test_banner_asset.py  test_boot_linter.py  test_embeddings.py  test_exec_tool.py  test_file_audit.py  test_files_service.py  test_files_tool.py  test_files_tool_abuse.py  test_files_tool_phase17.py  test_memory.py  test_memory_tool.py  test_memory_v15.py  test_observability.py  test_ollama_client.py  test_persona_phase22.py  test_queue.py  test_retrieval.py  test_scheduler.py  test_scheduler_tool.py  test_security.py  test_settings.py  test_skills.py  (+10 more)
(+217 files in other folders)
